--- a/backend/kkomdae/src/main/resources/application-local.properties
+++ b/backend/kkomdae/src/main/resources/application-local.properties
@@ -13,6 +13,6 @@ spring.mvc.view.suffix=.jsp
 spring.config.import=optional:file:.env
 
 # jpa
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
 logging.level.org.hibernate.SQL= DEBUG
 logging.level.org.hibernate.jdbc.bind= TRACE
