chore : 의존성 변경 및 기타파일 추가 의존성 JSP에서 Thymeleaf로 변경, 엔티티 Getter 추가, db 백업/pdf용 폰트파일 추가 S12P21D101-98

--- a/backend/kkomdae/build.gradle
+++ b/backend/kkomdae/build.gradle
@@ -32,10 +32,8 @@ dependencies {
 //  PDF
     implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.3'
     implementation 'com.itextpdf:itext7-core:7.2.6'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
-//  JSP
-    runtimeOnly 'org.glassfish.web:jakarta.servlet.jsp.jstl:2.0.0'
-    implementation "org.apache.tomcat.embed:tomcat-embed-jasper"
 
     compileOnly 'org.projectlombok:lombok'
 
