--- a/backend/kkomdae/src/main/resources/application-local.properties
+++ b/backend/kkomdae/src/main/resources/application-local.properties
@@ -5,14 +5,13 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PW}
 
-# jsp
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
-
 # .env
 spring.config.import=optional:file:.env
 
 # jpa
 spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
 logging.level.org.hibernate.SQL= DEBUG
-logging.level.org.hibernate.jdbc.bind= TRACE
+logging.level.org.hibernate.orm.jdbc.bind= TRACE
+
+# thymleaf
+spring.thymeleaf.cache=${THYMELEAF_CACHE}
