--- a/frontend/Kkomdae/app/src/main/AndroidManifest.xml
+++ b/frontend/Kkomdae/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:theme="@style/Theme.Kkomdae"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
-            android:exported="true" >
+            android:name=".SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,10 +22,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
-
+            android:name=".LoginActivity"
+            android:exported="false">
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
