feat: 액정 가이드 화면 xml 개발
- 촬영 액티비티도 추가, 촬영가이드 프레그먼트(액티비티 변수) 변경

xml 개발완료
S12P21D101-94 #done

--- a/frontend/Kkomdae/app/src/main/AndroidManifest.xml
+++ b/frontend/Kkomdae/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -7,7 +6,7 @@
         android:name="android.hardware.camera"
         android:required="true" />
 
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -20,18 +19,18 @@
         android:theme="@style/Theme.Kkomdae"
         tools:targetApi="31">
         <activity
+            android:name=".CameraActivity"
+            android:screenOrientation="landscape"
+            android:exported="false" />
+        <activity
             android:name=".SplashActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="false"/>
         <activity
             android:name=".LoginActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
-
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
