feat: test에 profile 설정 추가 S12P21D101-203

--- a/backend/kkomdae/src/main/resources/application-prod.properties
+++ b/backend/kkomdae/src/main/resources/application-prod.properties
@@ -9,6 +9,6 @@ spring.datasource.password=${DB_PW}
 
 
 # jpa
-spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
+spring.jpa.hibernate.ddl-auto=validate
 logging.level.org.hibernate.SQL= DEBUG
 logging.level.org.hibernate.orm.jdbc.bind= TRACE
