--- a/backend/kkomdae/build.gradle
+++ b/backend/kkomdae/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
 //  PDF
     implementation 'com.itextpdf:itext7-core:7.2.6'
+//  Thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 //  swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
