--- a/frontend/Kkomdae/app/src/main/AndroidManifest.xml
+++ b/frontend/Kkomdae/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
             android:exported="false"/>
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:exported="false"/>
     </application>
 
