--- a/backend/kkomdae/src/main/resources/application-local.properties
+++ b/backend/kkomdae/src/main/resources/application-local.properties
@@ -13,3 +13,8 @@ logging.level.org.hibernate.SQL= DEBUG
 logging.level.org.hibernate.orm.jdbc.bind= TRACE
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+sso.redirect.uri = ${REDIRECT_URI}
+sso.client.id = ${CLIENT_ID}
+sso.client.secret = ${CLIENT_SECRET}
+sso.apikey = ${API_KEY}
