fix: ci 단계에서 pip, python 미설치 해결
미설치 이슈를 해결하기 위해 dockerfile에서 테스트 진행

--- a/backend/kkomdae_landing_back/dockerfile
+++ b/backend/kkomdae_landing_back/dockerfile
@@ -28,6 +28,9 @@ RUN pip install --upgrade pip && pip install -r requirements.txt
 # 애플리케이션 전체 소스 코드를 컨테이너에 복사
 COPY ./ /app/
 
+# test 진행
+RUN python manage.py test
+
 # 컨테이너에서 사용할 포트 지정 (보통 gunicorn은 8000 포트를 사용)
 EXPOSE 8000
 
