feat: jwt 토큰 발급 구현 S12P21D101-228

--- a/backend/kkomdae/src/main/resources/application-local.properties
+++ b/backend/kkomdae/src/main/resources/application-local.properties
@@ -18,3 +18,6 @@ sso.redirect.uri = ${REDIRECT_URI}
 sso.client.id = ${CLIENT_ID}
 sso.client.secret = ${CLIENT_SECRET}
 sso.apikey = ${API_KEY}
+
+jwt.secret= 
+jwt.expiration=10000000000000
