--- a/backend/kkomdae/src/main/resources/application-local.properties
+++ b/backend/kkomdae/src/main/resources/application-local.properties
@@ -22,5 +22,5 @@ sso.apikey = ${API_KEY}
 logging.level.org.springframework.security=DEBUG
 
 
-jwt.secret= 
+jwt.secret=${JWT_SECRET}
 jwt.expiration=10000
