feat: 스웨거에 jwt 추가 S12P21D101-228

--- a/backend/kkomdae/src/main/resources/application-local.properties
+++ b/backend/kkomdae/src/main/resources/application-local.properties
@@ -23,4 +23,5 @@ logging.level.org.springframework.security=DEBUG
 
 
 jwt.secret=${JWT_SECRET}
-jwt.expiration=10000
+# 3??
+jwt.expiration=10000000
