--- a/backend/kkomdae/src/main/resources/application-prod.properties
+++ b/backend/kkomdae/src/main/resources/application-prod.properties
@@ -12,3 +12,16 @@ spring.datasource.password=${DB_PW}
 spring.jpa.hibernate.ddl-auto=validate
 logging.level.org.hibernate.SQL= DEBUG
 logging.level.org.hibernate.orm.jdbc.bind= TRACE
+
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+sso.redirect.uri = ${REDIRECT_URI}
+sso.client.id = ${CLIENT_ID}
+sso.client.secret = ${CLIENT_SECRET}
+sso.apikey = ${API_KEY}
+
+
+jwt.secret=${JWT_SECRET}
+# 3??
+jwt.expiration=10000000
