--- a/backend/kkomdae/src/main/resources/application-local.properties
+++ b/backend/kkomdae/src/main/resources/application-local.properties
@@ -14,6 +14,9 @@ logging.level.org.hibernate.orm.jdbc.bind= TRACE
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
+springdoc.swagger-ui.path=/api/swagger-ui.html
+springdoc.api-docs.path=/api/v3/api-docs
+
 sso.redirect.uri = ${REDIRECT_URI}
 sso.client.id = ${CLIENT_ID}
 sso.client.secret = ${CLIENT_SECRET}
