--- a/backend/kkomdae/src/main/resources/application-prod.properties
+++ b/backend/kkomdae/src/main/resources/application-prod.properties
@@ -18,6 +18,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 springdoc.swagger-ui.path=/api/swagger-ui.html
 springdoc.api-docs.path=/api/v3/api-docs
 
+logging.level.org.springframework.security=DEBUG
+
 sso.redirect.uri = ${REDIRECT_URI}
 sso.client.id = ${CLIENT_ID}
 sso.client.secret = ${CLIENT_SECRET}
