faet: 로그인 구현
- jwt토큰은 EncryptedSharedPreferences 저장, 리프레쉬 토큰은 KeyStoreApi를 사용해서 저장
- 로그인 통신 연결
- SSO로그인 구현

S12P21D101-195 #in-progress 로그인 구현중

--- a/frontend/Kkomdae/app/src/main/AndroidManifest.xml
+++ b/frontend/Kkomdae/app/src/main/AndroidManifest.xml
@@ -7,8 +7,10 @@
         android:required="true" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".base.ApplicationClass"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -37,7 +39,15 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
-            android:exported="false"/>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="com.pizza.kkomdae" android:host="callback" />
+            </intent-filter>
+
+        </activity>
     </application>
 
 </manifest>
