--- a/backend/kkomdae_django/dockerfile
+++ b/backend/kkomdae_django/dockerfile
@@ -36,7 +36,6 @@ EXPOSE 8000
 
 # 컨테이너 시작 시 실행할 명령어
 # 실제 서비스에서는 데이터베이스 마이그레이션이나 기타 사전 작업을 별도의 엔트리포인트 스크립트로 분리할 수 있습니다.
-# 여기서는 간단하게 gunicorn으로 WSGI 애플리케이션을 실행합니다.
-# "myproject"는 본인의 Django 프로젝트 폴더명으로 변경해주세요.
+# gunicorn으로 WSGI 애플리케이션을 실행.
 CMD ["gunicorn", "config.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "4", "--timeout", "60"]
 
