--- a/backend/kkomdae_flask/requirements.txt
+++ b/backend/kkomdae_flask/requirements.txt
@@ -5,10 +5,12 @@ click==8.1.8
 colorama==0.4.6
 dotenv==0.9.9
 Flask==3.1.0
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jmespath==1.0.1
 MarkupSafe==3.0.2
+packaging==24.2
 pillow==11.1.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
