--- a/backend/kkomdae/src/main/resources/application-local.properties
+++ b/backend/kkomdae/src/main/resources/application-local.properties
@@ -17,14 +17,18 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 springdoc.swagger-ui.path=/api/swagger-ui.html
 springdoc.api-docs.path=/api/v3/api-docs
 
+logging.level.org.springframework.security=DEBUG
+
 sso.redirect.uri = ${REDIRECT_URI}
 sso.client.id = ${CLIENT_ID}
 sso.client.secret = ${CLIENT_SECRET}
 sso.apikey = ${API_KEY}
 
-logging.level.org.springframework.security=DEBUG
-
 
 jwt.secret=${JWT_SECRET}
 # 3??
 jwt.expiration=10000000
+
+mattermost.base-url=${MATTERMOST_BASE_URL}
+mattermost.token=${MATTERMOST_TOKEN}
+mattermost.admin-user-id=${MATTERMOST_ADMIN_USER_ID}
