--- a/backend/kkomdae/build.gradle
+++ b/backend/kkomdae/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+//  s3
+    implementation("com.amazonaws:aws-java-sdk-s3:1.12.174")
+
 //  .env
     implementation 'me.paulschwarz:spring-dotenv:4.0.0'
 
