--- a/backend/kkomdae/src/main/resources/application-prod.properties
+++ b/backend/kkomdae/src/main/resources/application-prod.properties
@@ -31,3 +31,9 @@ jwt.expiration=10000
 mattermost.base-url=${MATTERMOST_BASE_URL}
 mattermost.token=${MATTERMOST_TOKEN}
 mattermost.admin-user-id=${MATTERMOST_ADMIN_USER_ID}
+
+#s3
+s3.accessKey=${S3_ACCESSKEY}
+s3.secretKey=${S3_SECRETKEY}
+s3.bucketName=${S3_BUCKETNAME}
+s3.prefix=${S3_PREFIX}
