--- a/backend/kkomdae/src/main/resources/application-prod.properties
+++ b/backend/kkomdae/src/main/resources/application-prod.properties
@@ -37,3 +37,9 @@ s3.accessKey=${S3_ACCESSKEY}
 s3.secretKey=${S3_SECRETKEY}
 s3.bucketName=${S3_BUCKETNAME}
 s3.prefix=${S3_PREFIX}
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Swagger ???? ?? ??
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.default-consumes-media-type=multipart/form-data
