--- a/backend/kkomdae/src/main/resources/application-prod.properties
+++ b/backend/kkomdae/src/main/resources/application-prod.properties
@@ -26,7 +26,7 @@ sso.apikey = ${API_KEY}
 
 jwt.secret=${JWT_SECRET}
 # 3??
-jwt.expiration=10000
+jwt.expiration=10000000
 
 mattermost.base-url=${MATTERMOST_BASE_URL}
 mattermost.token=${MATTERMOST_TOKEN}
