--- a/backend/kkomdae/src/main/resources/application-prod.properties
+++ b/backend/kkomdae/src/main/resources/application-prod.properties
@@ -26,7 +26,7 @@ sso.apikey = ${API_KEY}
 
 jwt.secret=${JWT_SECRET}
 # 3??
-jwt.expiration=10000000
+jwt.expiration=10000
 
 mattermost.base-url=${MATTERMOST_BASE_URL}
 mattermost.token=${MATTERMOST_TOKEN}
@@ -40,6 +40,3 @@ s3.prefix=${S3_PREFIX}
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# Swagger ???? ?? ??
-springdoc.swagger-ui.disable-swagger-default-url=true
-springdoc.default-consumes-media-type=multipart/form-data
