--- a/backend/kkomdae_flask/requirements.txt
+++ b/backend/kkomdae_flask/requirements.txt
@@ -9,6 +9,7 @@ gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jmespath==1.0.1
+logger==1.4
 MarkupSafe==3.0.2
 packaging==24.2
 pillow==11.1.0
