--- a/backend/kkomdae_flask/requirements.txt
+++ b/backend/kkomdae_flask/requirements.txt
@@ -10,6 +10,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 jmespath==1.0.1
 logger==1.4
+loguru==0.7.3
 MarkupSafe==3.0.2
 packaging==24.2
 pillow==11.1.0
@@ -19,3 +20,4 @@ s3transfer==0.11.4
 six==1.17.0
 urllib3==2.3.0
 Werkzeug==3.1.3
+win32_setctime==1.2.0
