--- a/backend/kkomdae/src/main/resources/application-local.properties
+++ b/backend/kkomdae/src/main/resources/application-local.properties
@@ -44,3 +44,5 @@ s3.bucketName=${S3_BUCKETNAME}
 s3.prefix=${S3_PREFIX}
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+flask.url=http://localhost:5000/analyze
