--- a/backend/kkomdae/src/main/resources/application-prod.properties
+++ b/backend/kkomdae/src/main/resources/application-prod.properties
@@ -39,3 +39,5 @@ s3.bucketName=${S3_BUCKETNAME}
 s3.prefix=${S3_PREFIX}
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+flask.url=http://flask:5000/analyze
