--- a/laptop_test/requirements.txt
+++ b/laptop_test/requirements.txt
@@ -1,5 +1,8 @@
 altgraph==0.17.4
+boto3==1.37.22
+botocore==1.37.22
 colorama==0.4.6
+jmespath==1.0.1
 numpy==2.2.3
 opencv-python==4.11.0.86
 packaging==24.2
@@ -9,7 +12,12 @@ psutil==7.0.0
 pyinstaller==6.12.0
 pyinstaller-hooks-contrib==2025.1
 pyperclip==1.9.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pywin32==308
 pywin32-ctypes==0.2.3
 qrcode==8.0
+s3transfer==0.11.4
+six==1.17.0
 ttkbootstrap==1.10.1
+urllib3==2.3.0
