fix: requirement 수정
- numpy 버전 수정
- opencv -python-headless 로 수정하는게 되면 좋겠다


Former-commit-id: 39a1a8b913d38bef2611f54b3fab161662b44a0e

--- a/backend/kkomdae_flask/requirements.txt
+++ b/backend/kkomdae_flask/requirements.txt
@@ -24,8 +24,8 @@ MarkupSafe==3.0.2
 matplotlib==3.10.1
 mpmath==1.3.0
 networkx==3.4.2
-numpy==2.1.1
-opencv-python==4.11.0.86
+numpy==1.26.4
+opencv-python-headless==4.8.0.76
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
