--- a/backend/kkomdae_flask/requirements.txt
+++ b/backend/kkomdae_flask/requirements.txt
@@ -25,7 +25,7 @@ matplotlib==3.10.1
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.1.1
-opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
