--- a/backend/kkomdae/src/main/resources/application-prod.properties
+++ b/backend/kkomdae/src/main/resources/application-prod.properties
@@ -8,7 +8,7 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PW}
 
 # jpa
-spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL= DEBUG
 logging.level.org.hibernate.orm.jdbc.bind= TRACE
 
