feat : 꼼대 다운로드 메시지 mm 전송 기능 추가 S12P21D101-280
Former-commit-id: f04793aedb17366c8325d7ae3eb0ad58c4fa373a

--- a/backend/kkomdae/src/main/resources/application-prod.properties
+++ b/backend/kkomdae/src/main/resources/application-prod.properties
@@ -29,8 +29,8 @@ jwt.secret=${JWT_SECRET}
 jwt.expiration=10000000
 
 mattermost.base-url=${MATTERMOST_BASE_URL}
-mattermost.token=${MATTERMOST_TOKEN}
-mattermost.admin-user-id=${MATTERMOST_ADMIN_USER_ID}
+mattermost.teamId=${MATTERMOST_TEAM_ID}
+mattermost.channelid=${MATTERMOST_CHANNEL_ID}
 
 #s3
 s3.accessKey=${S3_ACCESSKEY}
