--- a/backend/kkomdae/src/main/resources/application-local.properties
+++ b/backend/kkomdae/src/main/resources/application-local.properties
@@ -34,8 +34,8 @@ jwt.expiration=10000000
 
 #mattermost
 mattermost.base-url=${MATTERMOST_BASE_URL}
-mattermost.token=${MATTERMOST_TOKEN}
-mattermost.admin-user-id=${MATTERMOST_ADMIN_USER_ID}
+mattermost.teamId=${MATTERMOST_TEAM_ID}
+mattermost.channelid=${MATTERMOST_CHANNEL_ID}
 
 #s3
 s3.accessKey=${S3_ACCESSKEY}
