--- a/backend/kkomdae_flask/requirements.txt
+++ b/backend/kkomdae_flask/requirements.txt
@@ -12,6 +12,7 @@ cycler==0.12.1
 defusedxml==0.7.1
 distro==1.9.0
 dotenv==0.9.9
+fastapi==0.115.12
 filelock==3.18.0
 Flask==3.1.0
 fonttools==4.56.0
@@ -55,6 +56,7 @@ seaborn==0.13.2
 setuptools==78.1.0
 six==1.17.0
 sniffio==1.3.1
+starlette==0.46.1
 supervision==0.25.1
 sympy==1.13.1
 torch==2.6.0
