--- a/backend/kkomdae_flask/dockerfile
+++ b/backend/kkomdae_flask/dockerfile
@@ -27,5 +27,5 @@ ENV FLASK_APP=app.py
 ENV FLASK_ENV=production
 
 # gunicorn으로 Flask 앱 실행
-CMD ["gunicorn", "--workers", "4", "--bind", "0.0.0.0:5000", "app:app"]
-
+# CMD ["gunicorn", "--workers", "4", "--bind", "0.0.0.0:5000", "app:app"]
+CMD ["gunicorn", "app:app", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:5000"]
