--- a/backend/kkomdae_flask/requirements.txt
+++ b/backend/kkomdae_flask/requirements.txt
@@ -20,6 +20,7 @@ fsspec==2025.3.1
 gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
+httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
@@ -68,5 +69,8 @@ tzdata==2025.2
 ultralytics==8.3.99
 ultralytics-thop==2.0.14
 urllib3==2.3.0
+uvicorn==0.34.0
+watchfiles==1.0.4
+websockets==15.0.1
 Werkzeug==3.1.3
 win32_setctime==1.2.0
