--- a/frontend/Kkomdae/app/src/main/AndroidManifest.xml
+++ b/frontend/Kkomdae/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -60,6 +61,7 @@
         </activity>
         <activity
             android:name=".LoginActivity"
+            android:screenOrientation="portrait"
             android:exported="false"/>
         <activity
             android:name=".MainActivity"
