fix : gpu 서버 링크 변경
Former-commit-id: 126c3e6d0c58ce66af3cb0f118967c268b9c89c5

--- a/backend/kkomdae/src/main/resources/application-prod.properties
+++ b/backend/kkomdae/src/main/resources/application-prod.properties
@@ -40,4 +40,5 @@ s3.prefix=${S3_PREFIX}
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
-flask.url=http://flask:5000/analyze
+flask.url=http://3.36.136.37:5000/analyze
+#flask.url=http://flask:5000/analyze
