--- a/backend/kkomdae_flask/requirements.txt
+++ b/backend/kkomdae_flask/requirements.txt
@@ -1,3 +1,5 @@
+--extra-index-url https://download.pytorch.org/whl/cu126
+
 annotated-types==0.7.0
 anyio==4.9.0
 blinker==1.9.0
@@ -60,8 +62,9 @@ sniffio==1.3.1
 starlette==0.46.1
 supervision==0.25.1
 sympy==1.13.1
-torch==2.6.0
-torchvision==0.21.0
+torch==2.6.0+cu126
+torchaudio==2.6.0+cu126
+torchvision==0.21.0+cu126
 tqdm==4.67.1
 typing-inspection==0.4.0
 typing_extensions==4.13.0
